# ABOUTME: Project configuration for Treasurizer MCP server
# ABOUTME: PayHOA integration for condo association accounting

[project]
name = "treasurizer"
version = "0.1.0"
description = "MCP server for PayHOA condo association accounting"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastmcp>=2.0.0,<3",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "playwright>=1.57.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.scripts]
treasurizer = "treasurizer.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/treasurizer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"
